Add SnackBar on pressing NfcStatus icon

--- a/gift_keys/lib/static/i18n/de.i18n.yaml
+++ b/gift_keys/lib/static/i18n/de.i18n.yaml
@@ -26,6 +26,7 @@ pages:
         length: 'Das Passwort muss mindestens 4 Zeichen lang sein.'
   key:
     appBar: 'Geschenk Schlüssel'
-    nfcHint: 'Aktiviere NFC, um das Geschenk zu öffnen.'
+    nfcHintEnabled: 'Du benötigst einen Schlüssen, um das Geschenk zu öffnen.'
+    nfcHintDisabled: 'Aktiviere NFC, um das Geschenk zu öffnen.'
   keys:
     add: 'Schlüssel hinzufügen'
