--- a/gift_keys/lib/static/i18n/en.i18n.yaml
+++ b/gift_keys/lib/static/i18n/en.i18n.yaml
@@ -30,3 +30,10 @@ pages:
     nfcHintDisabled: 'Enable NFC to open this gift.'
   keys:
     add: 'Add Gift Key'
+    settings: 'Settings'
+  settings:
+    appBar: 'Settings'
+    design: 'Design'
+    language: 'Language'
+    reset: 'Reset'
+    license: 'External libraries and licenses'
