--- a/gift_keys/lib/static/i18n/en.i18n.yaml
+++ b/gift_keys/lib/static/i18n/en.i18n.yaml
@@ -16,7 +16,7 @@ pages:
       validation:
         empty: 'Please enter an application identifier.'
         hex: 'Please use only hexadecimal characters.'
-        length: 'Please make sure the AID is 10 to 32 characters long.'
+        length: 'AID must be between 10 to 32 characters long.'
     birthday:
       hint: 'Birthday'
       validation: 'Please enter a birthday.'
