Add local database error handling on KeyMetasPage

--- a/gift_keys/lib/static/i18n/de.i18n.yaml
+++ b/gift_keys/lib/static/i18n/de.i18n.yaml
@@ -22,6 +22,9 @@ pages:
     add: 'Schlüssel hinzufügen'
     settings: 'Einstellungen'
     deleteSuccess: 'Schlüssel wurde erfolgreich gelöscht.'
+    error:
+      button: 'Issue erstellen'
+      load: 'Schlüsseln konnten nicht geladen werden. Bitte erstelle ein Issue auf GitHub.'
   settings:
     appBar: 'Einstellungen'
     cache: 'Cache löschen'
