--- a/gift_keys/lib/static/i18n/en.i18n.yaml
+++ b/gift_keys/lib/static/i18n/en.i18n.yaml
@@ -22,6 +22,9 @@ pages:
     add: 'Add Gift Key'
     settings: 'Settings'
     deleteSuccess: 'Gift key has been deleted successfully.'
+    error:
+      button: 'Create issue'
+      load: 'Failed to load gift keys. Please create an issue on GitHub.'
   settings:
     appBar: 'Settings'
     cache: 'Delete cache'
