Add error handling for deleting gift key

--- a/gift_keys/lib/static/i18n/de.i18n.yaml
+++ b/gift_keys/lib/static/i18n/de.i18n.yaml
@@ -19,6 +19,9 @@ pages:
     edit: 'Bearbeiten'
     delete: 'Löschen'
     updateSuccess: 'Geschenk Schlüssel wurde erfolgreich aktualisiert.'
+    deleteDialog:
+      title: 'Schlüssel löschen'
+      content: 'Bist du dir sicher, dass du den Schlüssel löschen möchtest? Dieser Vorgang kann nicht rückgängig gemacht werden?'
   keys:
     add: 'Schlüssel erstellen'
     settings: 'Einstellungen'
