Add error handling for KeyPage

--- a/gift_keys/lib/static/i18n/de.i18n.yaml
+++ b/gift_keys/lib/static/i18n/de.i18n.yaml
@@ -3,7 +3,7 @@ appName: 'Geschenk Schlüssel'
 general:
   cancel: 'Abbrechen'
   ok: 'OK'
-  error: 'Es ist etwas schief gelaufen. Bitte kontaktiere den Support, wenn das Problem weiterhin besteht.'
+  error: 'Es ist etwas schief gelaufen.\nBitte kontaktiere den Support, wenn das Problem weiterhin besteht.'
 
 pages:
   addKey:
