--- a/gift_keys/lib/static/i18n/en.i18n.yaml
+++ b/gift_keys/lib/static/i18n/en.i18n.yaml
@@ -32,6 +32,8 @@ pages:
     error:
       button: 'Create issue'
       load: 'Failed to load gift keys. Please create an issue on GitHub.'
+  license:
+    copyright: '© 2025 Ngoc Quoc Huynh. All rights reserved. Licensed under the BSD 3-Clause License. Redistribution and use in source and binary forms, with or without modification, are permitted under the license terms.'
   settings:
     appBar: 'Settings'
     cache: 'Delete cache'
