--- a/gift_box/lib/static/i18n/en.i18n.yaml
+++ b/gift_box/lib/static/i18n/en.i18n.yaml
@@ -9,3 +9,6 @@ pages:
     nfcTooltip: 'Enable NFC to unlock the gift.'
   timer:
     tapMe: 'Tap me'
+  awesomeShop:
+    volumeUp: 'Crank up the volume!'
+    tap: 'Tap to unlock the Awesome Shop experience!'
