--- a/gift_box/lib/static/i18n/en.i18n.yaml
+++ b/gift_box/lib/static/i18n/en.i18n.yaml
@@ -50,4 +50,6 @@ pages:
     tapMe: 'Tap me'
 
 widgets:
-  couponAmount: 'x ${n: int}'
+  couponDisplay:
+    prefix: 'x'
+    amount: 'x ${n: int}'
