--- a/gift_box/lib/static/i18n/en.i18n.yaml
+++ b/gift_box/lib/static/i18n/en.i18n.yaml
@@ -6,6 +6,7 @@ pages:
     tap: 'Tap to unlock the Awesome Shop experience!'
   awesomeShopCatalog:
     appBar: 'Awesome Shop'
+    purchased: 'Purchased'
     items:
       ada:
         name: 'Artificial Directory and Assistant'
